# http_notifier_project

./: .gitignore  README.md  messages.txt  pyproject.toml  server.py
.claude/: settings.local.json
http_notifier/: __init__.py  cli.py  client.py
tests/: test_client.py
