[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "http_notifier"
version = "0.1.0"
description = "A non-blocking HTTP notification client with concurrency control"
dependencies = [
    "aiohttp",
]

[project.scripts]
notify = "http_notifier.cli:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
dev = ["flask"]

[tool.pytest.ini_options]
asyncio_mode = "auto"